<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_VCN" Id="{09a4fd4d-af49-4c30-8fb9-576bd4a65636}">
    <Declaration><![CDATA[TYPE ST_VCN :
STRUCT
	(* VCN - Valve Controlled Needle
	Used for Pfeiffer EVR 116 needle valves *)
	// Inputs
	i_iPosition	:	INT; //Position readback (if it exists)
	
	// Outputs
	q_iRawPosition	:	INT; //Position control 
	//For the EVR 116 this is 0-10V analog
	
	//Softvariables
	xIlk	:	BOOL := FALSE; // Interlock Bit
	rUpperLimit	:	REAL;	//Upper limit on valve open
	rReqPosition	:	REAL; //Requested position (0.0-100.0%)
	eValveControl	:	E_VCN := CloseValve; // Valve control state

	ftIlk	:	F_TRIG;	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>