<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="E_VAT590_PressureSensor" Id="{b68f089e-c16e-4b5b-831f-c18273eab52e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_VAT590_PressureSensor :
(
	NOT_DEFINED := 0,
	MKS500 := 1
) USINT := MKS500;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>